# test_ccc

./: CMakeLists.txt  Makefile  img_read.py  main.cpp  operation.h  sum.cpp  test_ccc.cbp
